src/test/ui/issues/issue-5153.stderr
error[E0599]: no method named `foo` found for reference `&dyn Foo` in the current scope
  --> $DIR/issue-5153.rs:10:27
   |
LL | trait Foo {
   | --------- `Foo` defines an item `foo`
...
LL |     (&5isize as &dyn Foo).foo();
   |                           ^^^ method not found in `&dyn Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
